--- a/veterinary_project/package.json
+++ b/veterinary_project/package.json
@@ -20,7 +20,8 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.2",
     "react-icons": "^5.1.0",
-    "react-router-dom": "^6.22.3",
+    "react-router-dom": "^6.23.1",
+    "switch": "^0.0.0",
     "universal-cookie": "^7.1.4"
   },
   "devDependencies": {
